zokrates_cli/examples/compile_errors/out_of_bounds.zok
def main(field a, field b) -> field:
    field[10] arr = [0; 10]
    u32 index = if [a, 1] != [b, 0] then 1000 else 0 fi
    return arr[index]